changed directory of _redirects

--- a/blogs/Bangkok.html
+++ b/blogs/Bangkok.html
@@ -510,7 +510,7 @@
                   <br>
                   <a href="./Thailand" class="link-h2">Отдых в Тайланде</a>
                   <br>
-                  <a href="./phuket-beach.html" class="link-h2">Пляжи Пхукета</a>
+                  <a href="./phuket-beach" class="link-h2">Пляжи Пхукета</a>
 
 
 
