added pattaya blog

--- a/blogs/Bali.html
+++ b/blogs/Bali.html
@@ -346,7 +346,7 @@
             экспозиций хуже Джакарты.
           </li>
           <li class="section-1-li-styled">
-            Храмы – буддистов, индуистов, западно-христианские./li>
+            Храмы – буддистов, индуистов, западно-христианские.
           </li>
           <li class="section-1-li-styled">Мечети.</li>
           <li class="section-1-li-styled">
