added pattaya blog

--- a/blogs.html
+++ b/blogs.html
@@ -131,7 +131,36 @@
     <!-- ================MAIN SECTION - 1 ================================================================================================================================================================ -->
     <section class="center section-1">
       <div class="inner col-2">
-          
+        <!-- PATTAYA BLOG PREVIEW -->
+        <a href="./blogs/pattaya" class="spacer-vertical-1rem">
+          <div class="blog-preview-container">
+            <div class="blog-title-container">
+              <h2 class="h2">Тайланд Паттайя</h2>
+            </div>
+            <ul class="section-1-ul">
+              <li class="section-1-li">September 3, 2020</li>
+              <span>•</span>
+              <li class="section-1-li">Автор</li>
+              <span>•</span>
+              <li class="section-1-li">Боря Ф</li>
+            </ul>
+            <div class="img-wrapper-large">
+              <img
+                src="./assets/Blog-page/blog display/pattaya-blog.jpg"
+                alt="паттайя тайланд"
+                class="img img-large"
+              />
+            </div>
+            <div class="justify-wrapper">
+              <p class="p">
+                По меркам Таиланда, Паттайя считается одним из самых популярных
+                курортов среди русскоговорящих туристов.
+              </p>
+            </div>
+          </div>
+        </a>
+        <!-- END OF PATTAYA BLOG PREVIEW -->
+
         <!-- SRI-LANKA BLOG PREVIEW -->
         <a href="./blogs/srilanka" class="spacer-vertical-1rem">
           <div class="blog-preview-container">
