--- a/sitemap.html
+++ b/sitemap.html
@@ -148,6 +148,12 @@
                 </li>
                 
                 <li class="section-1-li">
+                    <a href="./blogs/pattaya" class="link-text">
+                        Тайланд Паттайя
+                    </a>
+                </li>
+                
+                <li class="section-1-li">
                     <a href="./sitemap.html" class="link-text">
                         Карта сайта
                     </a>
