--- a/tours.html
+++ b/tours.html
@@ -248,6 +248,21 @@
           <div class="section-6-item-wrapper">
             
             <!-- BLOG -->
+              <div class="section-6-item-container">
+                <img
+                  loading="lazy"
+                  src="./assets/images/small/pattaya-small.jpg"
+                  alt="паттайя тайланд"
+                  class="section-6-img"
+                />
+                <div class="section-6-text-container">
+                  <h3 class="section-6-h3">Паттайя Таиланд</h3>
+                  <a href="./blogs/pattaya" class="section-6-a">Читать далее</a>
+                </div>
+              </div>
+            <!--END OF BLOG -->
+            
+            <!-- BLOG -->
             <div class="section-6-item-container">
               <img
                 loading="lazy"
@@ -258,7 +273,6 @@
               <div class="section-6-text-container">
                 <h3 class="section-6-h3">Шри Ланка</h3>
                 <a href="./blogs/srilanka" class="section-6-a">Читать далее</a>
-                <!-- <a href="" class="section-6-a">- Блог</a> -->
               </div>
             </div>
           <!--END OF BLOG -->
