added pattaya blog

--- a/blogs/pattaya.html
+++ b/blogs/pattaya.html
@@ -293,7 +293,7 @@
 
         <p class="section-1-p">
           Поиск отелей c самыми низкими ценами в Паттайе можно также осуществить
-          на нашем сервисе или через гугл по запросу с названием города и
+          на <a href="../index" class="text-link">нашем сервисе</a> или через гугл по запросу с названием города и
           словами Backpackers или Hostel. В таких местах ночлег может стоить
           менее 1000 рублей в сутки за тесную комнату с вентилятором вместо
           кондиционера или за койко-место в хостеле. В низкий сезон можно
