added pattaya blog

--- a/blogs.html
+++ b/blogs.html
@@ -172,7 +172,7 @@
               <span>•</span>
               <li class="section-1-li">Автор</li>
               <span>•</span>
-              <li class="section-1-li">Боря Ф</li>
+              <li class="section-1-li">Вадим</li>
             </ul>
             <div class="img-wrapper-large">
               <img
