--- a/blogs/srilanka.html
+++ b/blogs/srilanka.html
@@ -134,7 +134,7 @@
           <span>•</span>
           <li class="section-1-li">Автор</li>
           <span>•</span>
-          <li class="section-1-li">Боря Ф</li>
+          <li class="section-1-li">Вадим</li>
         </ul>
 
         <!-- <div class="section-1-cont-3-col">
