added pattaya blog

--- a/blogs/pattaya.html
+++ b/blogs/pattaya.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Шри-Ланка небольшое островное государство, расположенное Южнее. Отдых на Шри Ланке,
-      как добраться. Местные обычаи на острове, достопримечательности острова."
+      content="Паттайя один из самых популярных и зажигательных курортов Таиланда.
+      Пляжи Паттайи, зажигательное веселье о утра делает курорт отличительным от других."
     />
     <link rel="stylesheet" href="./style/pattaya/pattaya.css" />
     <link
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
     <link rel="icon" href="../favicon.ico" type="image/x-icon" />
-    <title>Шри Ланка отдых, Шри Ланка туры, отели.</title>
+    <title>Паттайя, Таиланд – отдых, пляжи и отели Паттайи</title>
     <!-- Yandex.Metrika counter -->
     <script defer type="text/javascript">
       (function (m, e, t, r, i, k, a) {
