added pattaya blog

--- a/blogs/pattaya.html
+++ b/blogs/pattaya.html
@@ -410,7 +410,7 @@
           монастырем.
         </p>
 
-        <h2 class="section-1-h2">H2Пляжи</h2>
+        <h2 class="section-1-h2">Пляжи</h2>
 
         <div class="section-1-img-wrapper">
           <img
