added thailand travel

--- a/sitemap.html
+++ b/sitemap.html
@@ -152,6 +152,11 @@
                         Тайланд Паттайя
                     </a>
                 </li>
+                <li class="section-1-li">
+                    <a href="./blogs/thailand-travel" class="link-text">
+                        Курорты Тайланда
+                    </a>
+                </li>
                 
                 <li class="section-1-li">
                     <a href="./sitemap.html" class="link-text">
