--- a/tours.html
+++ b/tours.html
@@ -251,6 +251,22 @@
               <div class="section-6-item-container">
                 <img
                   loading="lazy"
+                  src="./assets/images/small/thailand-travel-small.jpg"
+                  alt="Курорты Тайланда"
+                  class="section-6-img"
+                />
+                <div class="section-6-text-container">
+                  <h3 class="section-6-h3">Курорты Тайланда</h3>
+                  <a href="./blogs/pattaya" class="section-6-a">Читать далее</a>
+                  <!-- <a href="" class="section-6-a">- Блог</a> -->
+                </div>
+              </div>
+            <!--END OF BLOG -->
+            
+            <!-- BLOG -->
+              <div class="section-6-item-container">
+                <img
+                  loading="lazy"
                   src="./assets/images/small/pattaya-small.jpg"
                   alt="паттайя тайланд"
                   class="section-6-img"
