--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
               />
               <div class="section-6-text-container">
                 <h3 class="section-6-h3">Курорты Тайланда</h3>
-                <a href="./blogs/pattaya" class="section-6-a">Читать далее</a>
+                <a href="./blogs/thailand-travel" class="section-6-a">Читать далее</a>
                 <!-- <a href="" class="section-6-a">- Блог</a> -->
               </div>
             </div>
