--- a/blogs/thailand-travel.html
+++ b/blogs/thailand-travel.html
@@ -163,8 +163,7 @@
           туроператора. Например, купить авиабилеты в Бангкок, а далее уже
           перемещаться по стране на автобусах, самолетах и поездах. Для поиска
           отелей на месте можно использовать, как
-          <a href="../index" class="text-link">наш сервис</a>
-          , так и собственные ноги. Прости зайти и поселиться при наличии
+          <a href="../index" class="text-link">наш сервис</a>, так и собственные ноги. Прости зайти и поселиться при наличии
           свободных мест.
         </p>
 
