--- a/tours.html
+++ b/tours.html
@@ -191,7 +191,7 @@
           <section class="center section-3">
               <div class="inner section-3-inner">
                 <!-- <script src="//c26.travelpayouts.com/content?promo_id=1494&shmarker=290725&city=%20%D0%A2%D1%83%D1%80%D1%86%D0%B8%D1%8F&startDate=&endDate=&adults=0&scroll=true&powered_by=true&country=TR" charset="utf-8" async></script> -->
-                <script src="//tp.media/content?promo_id=4097&shmarker=290725&campaign_id=26&destination_iata=TR&locale=ru&currency=rub&powered_by=false&min_lines=15&scroll_height=&origin_iata=MOW" charset="utf-8"></script>
+                <!-- <script src="//tp.media/content?promo_id=4097&shmarker=290725&campaign_id=26&destination_iata=TR&locale=ru&currency=rub&powered_by=false&min_lines=15&scroll_height=&origin_iata=MOW" charset="utf-8"></script> -->
               </div>
           </section>
           
