--- a/personal-data.html
+++ b/personal-data.html
@@ -318,9 +318,11 @@
           предварительного уведомления Пользователя. При внесении изменений в
           актуальной редакции указывается дата последнего обновления.
         </p>
-        
+
         <div class="end-button-wrapper">
-          <a href="./index" class=""><button class="end-button">На главную</button></a>
+          <a href="./index" class=""
+            ><button class="end-button">На главную</button></a
+          >
         </div>
       </div>
     </section>
@@ -363,6 +365,10 @@
               Поиск дешевых авиабилетов и отелей, бронирование туров онлайн
             </h4>
           </div>
+
+          <p class="footer-col-2-p">
+            при копировании материалов прямая ссылка обязательна.
+          </p>
 
           <div class="social-media-container">
             <ul class="social-media-ul">
@@ -421,7 +427,15 @@
               </li>
             </ul>
           </div>
-          <a href="./sitemap" class="link-h5">Карта сайта</a>
+          <div class="footer-col-2-last-div">
+            <a href="./sitemap" class="link-h5 link-spacer">Карта сайта</a>
+            <a href="./personal-data" class="link-h5 link-spacer"
+              >Политика конфиденциальности</a
+            >
+            <a href="./terms-of-use" class="link-h5 link-spacer"
+              >Правила пользования</a
+            >
+          </div>
         </div>
         <div class="footer-col-3"></div>
       </div>
