--- a/personal-data.html
+++ b/personal-data.html
@@ -128,7 +128,7 @@
 
     <section class="section-1 center">
       <div class="inner">
-        <h2 class="h2">Актуальная версия от</h2>
+        <h2 class="current-version-header">Актуальная версия от <span class="date-span"> 16/09/20</span></h2>
 
         <p class="p">
           1. Общие положения
@@ -202,8 +202,6 @@
         </p>
 
         <br />
-        <br />
-        <br />
 
         <p class="p">
           2. Условия сбора и хранения Персональных данных
@@ -244,6 +242,8 @@
           данных.
         </p>
 
+        <br />
+
         <p class="p">
           3. Цели Соглашения
           <br />
@@ -271,8 +271,6 @@
         </p>
 
         <br />
-        <br />
-        <br />
 
         <p class="p">
           4. Безопасность
@@ -297,8 +295,6 @@
         </p>
 
         <br />
-        <br />
-        <br />
 
         <p class="p">
           5. Заключительные положения
@@ -320,7 +316,7 @@
         </p>
 
         <div class="end-button-wrapper">
-          <a href="./index" class=""
+          <a href="./" class=""
             ><button class="end-button">На главную</button></a
           >
         </div>
