--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -132,16 +132,20 @@
 
     <section class="section-1 center">
       <div class="inner">
-        <p class="p">
-          Актуальная версия от 9/16/20
-          <br /><br />
+        <p class="current-version-header">
+          Актуальная версия от <span class="date-span">16/09/20</span>
+          <br />
 
+          
+        </p>
+
+
+        <p class="p">
           Перед использованием Cервиса, пожалуйста, ознакомьтесь с условиями
           этих Правил. Факт использования Сервиса любым способом признается
           акцептом, то есть полным и безоговорочным согласием Пользователя
           использовать Сервис на изложенных ниже условиях.
         </p>
-
         <h2 class="h2">Общие положения</h2>
 
         <p class="p">
@@ -377,7 +381,7 @@
         </p>
 
         <div class="end-button-wrapper">
-          <a href="./index" class=""
+          <a href="./" class=""
             ><button class="end-button">На главную</button></a
           >
         </div>
