--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
                 </h4>
              </div>
 
-             <p class="footer-col-2-p">при копировании материалов прямая ссылка обязательна.</p>
+             <p class="footer-col-2-p">При копировании материалов прямая ссылка обязательна.</p>
               
               <div class="social-media-container">
                 <ul class="social-media-ul">
