--- a/personal-data.html
+++ b/personal-data.html
@@ -363,7 +363,7 @@
           </div>
 
           <p class="footer-col-2-p">
-            при копировании материалов прямая ссылка обязательна.
+            При копировании материалов прямая ссылка обязательна.
           </p>
 
           <div class="social-media-container">
