--- a/personal-data.html
+++ b/personal-data.html
@@ -107,10 +107,10 @@
           </div>
           <ul class="site-ul">
             <li class="site-li">
-              <a href="/index" class="site-a">Авиабилеты</a>
+              <a href="/" class="site-a">Авиабилеты</a>
             </li>
             <li class="site-li">
-              <a href="/index" class="site-a">Отели</a>
+              <a href="/" class="site-a">Отели</a>
             </li>
             <li class="site-li">
               <a target="_blank" href="./blogs" class="site-a">Блог</a>
