--- a/tours.html
+++ b/tours.html
@@ -72,10 +72,10 @@
   <div class="phone-menu">
     <ul class="phone-ul">
         <li class="phone-li">
-            <a href="/index" class="phone-a">Авиабилеты</a>
+            <a href="/" class="phone-a">Авиабилеты</a>
         </li>
         <li class="phone-li">
-            <a href="/index" class="phone-a">Отели </a>
+            <a href="/" class="phone-a">Отели </a>
         </li>
         <li class="phone-li">
             <a href="blogs" class="phone-a">Блог</a>
@@ -110,11 +110,11 @@
  <!-----------------HEADER MENU------------------------------------------------------------------------------------------------------------------------------------- -->
                 <ul style="justify-content: flex-end;" class="header-ul">
                   <li class="header-li">
-                    <a href="/index" class="header-a">Авиабилеты
+                    <a href="/" class="header-a">Авиабилеты
                     </a>
                   </li>
                   <li class="header-li">
-                    <a href="/index" class="header-a">Отели 
+                    <a href="/" class="header-a">Отели 
                     </a>
                   </li>
                   <li class="header-li">
