--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -124,7 +124,7 @@
         </div>
       </nav>
       <h1 class="header-h1">
-        Правила использования cервиса поиска авиабилетов, отелей
+        Правила использования сервиса поиска авиабилетов, отелей
       </h1>
       <!-- <p class="header-p">Y-Flights это поиск самых выгодных билетов на самолет и бронирование отелей </p> -->
     </header>
