--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -382,8 +382,10 @@
         </p>
 
         <div class="end-button-wrapper">
-          <a href="./" class=""
-            ><button class="end-button">На главную</button></a
+          <a href="./" class="end-button">
+            На главную
+            <!-- <button class="end-button">На главную</button> -->
+            </a
           >
         </div>
       </div>
