--- a/sitemap.html
+++ b/sitemap.html
@@ -157,6 +157,17 @@
                         Курорты Тайланда
                     </a>
                 </li>
+                <li class="section-1-li">
+                    <a href="./personal-data" class="link-text">
+                        Политика конфиденциальности
+
+                    </a>
+                </li>
+                <li class="section-1-li">
+                    <a href="./terms-of-use" class="link-text">
+                        Правила пользования
+                    </a>
+                </li>
                 
                 <li class="section-1-li">
                     <a href="./sitemap.html" class="link-text">
