--- a/blogs/pattaya.html
+++ b/blogs/pattaya.html
@@ -293,16 +293,18 @@
 
         <p class="section-1-p">
           Поиск отелей c самыми низкими ценами в Паттайе можно также осуществить
-          на <a href="../index" class="text-link">нашем сервисе</a> или через гугл по запросу с названием города и
-          словами Backpackers или Hostel. В таких местах ночлег может стоить
-          менее 1000 рублей в сутки за тесную комнату с вентилятором вместо
-          кондиционера или за койко-место в хостеле. В низкий сезон можно
-          поселиться и без предварительной брони, но лучше не рисковать,
-          все-таки курортный город. Довольно много отелей, где номер-дабл стоит
-          2-3 тыс. рублей за сутки. В самых дорогих, например, в Hard Rock Hotel
-          стоимость номера может составлять от 8 до 70 тыс. рублей. При таких
-          отелях есть не только ресторан, но и огромный бассейн с имитацией
-          пляжа и стенка для скалолазания.
+          на
+          <a href="../index" class="text-link">нашем сервисе</a>
+          или через гугл по запросу с названием города и словами Backpackers или
+          Hostel. В таких местах ночлег может стоить менее 1000 рублей в сутки
+          за тесную комнату с вентилятором вместо кондиционера или за
+          койко-место в хостеле. В низкий сезон можно поселиться и без
+          предварительной брони, но лучше не рисковать, все-таки курортный
+          город. Довольно много отелей, где номер-дабл стоит 2-3 тыс. рублей за
+          сутки. В самых дорогих, например, в Hard Rock Hotel стоимость номера
+          может составлять от 8 до 70 тыс. рублей. При таких отелях есть не
+          только ресторан, но и огромный бассейн с имитацией пляжа и стенка для
+          скалолазания.
         </p>
 
         <div class="section-1-img-wrapper">
@@ -707,26 +709,21 @@
           Купить авиабилеты он-лайн можно и в самой Паттайе. В курортном городе
           нет проблем с Wi-Fi и интернет-кафе, где час стоит около 100 рублей.
         </p>
-        
+
         <p class="section-1-p">
-            Больше информации от Таиланде вы можете узнать из наших статей:
+          Больше информации от Таиланде вы можете узнать из наших статей:
         </p>
-        <br>
+        <br />
 
         <a href="./Bangkok" class="text-link-h2">Столица Таиланда Бангкок</a>
         <br />
         <a href="./Phuket" class="text-link-h2">Таиланд остров Пхукет</a>
         <br />
         <a href="./Thailand" class="text-link-h2">Отдых в Таиланде</a>
-        <br>
+        <br />
         <a href="./phuket-beach" class="text-link-h2">Пляжи Пхукета</a>
       </div>
     </section>
-    
-
-
-
-
 
     <!-- COMMENT SECTION  ======================================================================================================-->
 
@@ -785,6 +782,8 @@
 
     <!-- END OF COMMENTS SECTION - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  -->
 
+    <!-- = = = = = = FOOTER = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = =-->
+
     <footer class="center footer">
       <div class="inner footer-inner">
         <div class="footer-col-1">
@@ -792,23 +791,23 @@
 
           <ul class="footer-ul">
             <li class="footer-li">
-              <a href="../blogs/Phuket" class="footer-link">Отдых на Пхукете</a>
+              <a href="./blogs/Phuket" class="footer-link">Отдых на Пхукете</a>
             </li>
 
             <li class="footer-li">
-              <a href="../blogs/Thailand" class="footer-link">
+              <a href="./blogs/Thailand" class="footer-link">
                 Таиланд, как добраться, где отдохнуть
               </a>
             </li>
 
             <li class="footer-li">
-              <a href="../blogs/Bangkok" class="footer-link">
+              <a href="./blogs/Bangkok" class="footer-link">
                 Столица Таиланда – Бангкок
               </a>
             </li>
 
             <li class="footer-li">
-              <a href="../blogs/flightticket" class="footer-link">
+              <a href="./blogs/flightticket" class="footer-link">
                 Поиск авиабилетов, отелей и туров – почему мы
               </a>
             </li>
@@ -823,6 +822,10 @@
               Поиск дешевых авиабилетов и отелей, бронирование туров онлайн
             </h4>
           </div>
+
+          <p class="footer-col-2-p">
+            При копировании материалов прямая ссылка обязательна.
+          </p>
 
           <div class="social-media-container">
             <ul class="social-media-ul">
@@ -865,7 +868,6 @@
                   />
                 </a>
               </li>
-
               <li class="social-media-li">
                 <a
                   target="_blank"
@@ -881,13 +883,25 @@
               </li>
             </ul>
           </div>
-          <a href="../sitemap" class="link-h5">Карта сайта</a>
+          <div class="footer-col-2-last-div">
+            <a href="./sitemap" class="link-h5 link-spacer">Карта сайта</a>
+            <a href="./personal-data" class="link-h5 link-spacer">
+              Политика конфиденциальности
+            </a>
+            <a href="./terms-of-use" class="link-h5 link-spacer">
+              Правила пользования
+            </a>
+          </div>
         </div>
+
         <div class="footer-col-3"></div>
       </div>
     </footer>
 
-    <!-- END OF FOOTER - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  -->
+   
+
+    <!-- = = = = = = END OF FOOTER = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = -->
+
     <script src="../scripts/blogs/Pattaya.js"></script>
     <script>
       const burgerBtn = document.querySelector(".burger-menu");
