--- a/blogs/srilanka.html
+++ b/blogs/srilanka.html
@@ -557,6 +557,8 @@
 
     <!-- END OF COMMENTS SECTION - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  -->
 
+    <!-- = = = = = = FOOTER = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = =-->
+
     <footer class="center footer">
       <div class="inner footer-inner">
         <div class="footer-col-1">
@@ -564,23 +566,23 @@
 
           <ul class="footer-ul">
             <li class="footer-li">
-              <a href="../blogs/Phuket" class="footer-link">Отдых на Пхукете</a>
+              <a href="./blogs/Phuket" class="footer-link">Отдых на Пхукете</a>
             </li>
 
             <li class="footer-li">
-              <a href="../blogs/Thailand" class="footer-link">
+              <a href="./blogs/Thailand" class="footer-link">
                 Таиланд, как добраться, где отдохнуть
               </a>
             </li>
 
             <li class="footer-li">
-              <a href="../blogs/Bangkok" class="footer-link">
+              <a href="./blogs/Bangkok" class="footer-link">
                 Столица Таиланда – Бангкок
               </a>
             </li>
 
             <li class="footer-li">
-              <a href="../blogs/flightticket" class="footer-link">
+              <a href="./blogs/flightticket" class="footer-link">
                 Поиск авиабилетов, отелей и туров – почему мы
               </a>
             </li>
@@ -595,6 +597,10 @@
               Поиск дешевых авиабилетов и отелей, бронирование туров онлайн
             </h4>
           </div>
+
+          <p class="footer-col-2-p">
+            При копировании материалов прямая ссылка обязательна.
+          </p>
 
           <div class="social-media-container">
             <ul class="social-media-ul">
@@ -637,7 +643,6 @@
                   />
                 </a>
               </li>
-
               <li class="social-media-li">
                 <a
                   target="_blank"
@@ -653,13 +658,24 @@
               </li>
             </ul>
           </div>
-          <a href="../sitemap" class="link-h5">Карта сайта</a>
+          <div class="footer-col-2-last-div">
+            <a href="./sitemap" class="link-h5 link-spacer">Карта сайта</a>
+            <a href="./personal-data" class="link-h5 link-spacer">
+              Политика конфиденциальности
+            </a>
+            <a href="./terms-of-use" class="link-h5 link-spacer">
+              Правила пользования
+            </a>
+          </div>
         </div>
+
         <div class="footer-col-3"></div>
       </div>
     </footer>
 
-    <!-- END OF FOOTER - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  -->
+ 
+
+    <!-- = = = = = = END OF FOOTER = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = -->
     <script src="../scripts/blogs/Srilanka.js"></script>
     <script>
       const burgerBtn = document.querySelector(".burger-menu");
