--- a/index.html
+++ b/index.html
@@ -483,6 +483,8 @@
           </p>
   
       </section>
+      
+      <!-- = = = = = = FOOTER = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = =-->
   
       <footer class="center footer">
         <div class="inner footer-inner">
@@ -577,6 +579,8 @@
           </button>
         </div>
       </div>
+      
+<!-- = = = = = = END OF FOOTER = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = -->
 <!-- - - - - - - - - - -  FOR TOUR FUNCTION - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  -->
 <script>
   const tourBtn = document.querySelector(".tourBtn");
